Refactor: Modularize by extracting the alarm scheduling functionality from the alarm-service and creating the alarm-scheduler module.